# ragger.cpp

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DESIGN_FADING_MEMORY.md  FEATURE_SUGGESTIONS.md  FEATURE_SUGGESTIONS_2.md  Makefile  OPENCLAW.md  ProgramOptions.cpp  ProgramOptions.h  README.md  README_TO_AGENT.md  README_USER_TEST.md  ROADMAP.md  SOUL.md  build.sh  cmake_install.cmake  example-config.conf  example-settings.ini  example-system.ini  example-user.ini  install-system.sh  install.sh  test.sh
.cmake/api/v1/reply/: cache-v2-8c18a862e616f850ccc8.json  cmakeFiles-v1-dee80270692f8461552d.json  codemodel-v2-c7d2336465966bb5b356.json  directory-.-Debug-3877c86bb5c3cd148fa3.json  directory-vendor.tokenizers-cpp-Debug-0758dca396a3764ed56e.json  directory-vendor.tokenizers-cpp.msgpack-Debug-d3ea2dedc70a01b94507.json  directory-vendor.tokenizers-cpp.sentencepiece-Debug-73afa5f366651bd52784.json  directory-vendor.tokenizers-cpp.sentencepiece.src-Debug-3820036b5e947bc5f705.json  directory-vendor.tokenizers-cpp.sentencepiece.third_party-Debug-72003e4f1f618a3d1b33.json  index-2026-03-24T00-28-44-0110.json  target-c_lib_po-Debug-ea4b9d1b5499417257d4.json  target-doxygen-Debug-892cc20130046a74a98e.json  target-ragger-Debug-bd0c69e749a50193eaf8.json  target-ragger_core-Debug-650656cdc6f5eaa5d44d.json  target-sentencepiece-static-Debug-b633cb6d63c0450585f8.json  target-sentencepiece_train-static-Debug-eff95d8df4a9f49ee3f2.json  target-spm_decode-Debug-dd067af5ea1226b81df9.json  target-spm_encode-Debug-5cc64edceeeef450cdbf.json  target-spm_export_vocab-Debug-843d660992701d6edcb6.json  target-spm_normalize-Debug-bfadcccadaa6c3af0b2f.json  target-spm_train-Debug-127dd38a4a83501b0bf5.json  target-test_auth-Debug-e8e99517e948029d288a.json  target-test_bm25-Debug-9807d2b9ec9de3133af2.json  target-test_client-Debug-d27521269ccbc192fcbc.json  target-test_config-Debug-49a4ba9025be317ea0b6.json  target-test_import-Debug-04ea8f585b74211175da.json  target-test_server-Debug-a918280870308e0cc99a.json  target-test_sqlite_backend-Debug-5223f3b02ad006d5b511.json  target-tokenizers_c-Debug-fa9ac9a77f316a9a0232.json  target-tokenizers_cpp-Debug-5c075f6261460f8ca7a0.json  toolchains-v1-e5ebbd3531d7aa42116f.json
docs/: agent-integration.md  call-graph-4-16-v2.dot  call-graph-4-16.dot  chat-implementation.md  chat-payloads.md  chat-persistence.md  collections.md  configuration.md  deployment.md  design-decisions.md  erd-01-overview.dot  erd-02-modules.dot  erd-03-classes-full.dot  erd-04-methods.dot  getting-started.md  http-api.md  importing-conversations.md  openclaw.md  project-structure.md  search-and-rag.md  testing-your-install.md  tls-setup.md
formats/: anthropic.json  openai.json
include/ragger/: api_formats.h  auth.h  bm25.h  chat.h  chat_sessions.h  client.h  config.h  embedder.h  import.h  inference.h  lang.h  llama_manager.h  logs.h  mcp.h  memory.h  server.h  sqlite_backend.h  sqlite_user_manager.h  storage_backend.h  storage_types.h  user_manager.h
include/ragger/lang/: en.h
openclaw-plugin/: README.md  index.ts  openclaw.plugin.json
scripts/: import-claude-conversations.py
src/: api_formats.cpp  auth.cpp  bm25.cpp  chat.cpp  chat.cpp.bak  chat.cpp.bak2  chat.cpp.bak3  chat_sessions.cpp  client.cpp  config.cpp  embedder.cpp  import.cpp  inference.cpp  llama_manager.cpp  logs.cpp  main.cpp  mcp.cpp  memory.cpp  server.cpp  sqlite_backend.cpp  sqlite_user_manager.cpp  tokenizer_wrapper.cpp  tokenizer_wrapper.h
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_auth.cpp  test_bm25.cpp  test_client.cpp  test_config.cpp  test_embedder.cpp  test_export.cpp  test_import.cpp  test_logging.cpp  test_memory.cpp  test_path_normalization.cpp  test_server.cpp  test_sqlite_backend.cpp
tests/python/: test_http_api.py
tools/: test_fp16_precision  test_fp16_precision.cpp
web/: chat.js  index.html  login.html  style.css
